--- a/contact.html
+++ b/contact.html
@@ -40,19 +40,12 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop"
                            data-toggle="dropdown">
-                            Teams
+                            Vaccines
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="teams/mercedes.html">Mercedes</a>
-                            <a class="dropdown-item" href="teams/ferrari.html">Ferrari</a>
-                            <a class="dropdown-item" href="teams/redbull.html">Red Bull</a>
-                            <a class="dropdown-item" href="teams/mclaren.html">Mclaren</a>
-                            <a class="dropdown-item" href="teams/renault.html">Renault</a>
-                            <a class="dropdown-item" href="teams/toro.html">Toro Rosso</a>
-                            <a class="dropdown-item" href="teams/haas.html">Haas</a>
-                            <a class="dropdown-item" href="teams/racingpoint.html">Racing Point</a>
-                            <a class="dropdown-item" href="teams/sauber.html">Alfa Romeo Sauber</a>
-                            <a class="dropdown-item" href="teams/williams.html">Williams</a>
+                            <a class="dropdown-item" href="teams/mercedes.html">Pfizer</a>
+                            <a class="dropdown-item" href="teams/ferrari.html">Moderna</a>
+                            <a class="dropdown-item" href="teams/redbull.html">Janssen</a>
 
                         </div>
                     </li>
@@ -62,7 +55,7 @@
     </div>
     <main>
         <section>
-            <h2>Please fill out the form below to contact me.</h2>
+            <h2>Please fill out the form below to contact us.</h2>
 
     </main>
 
