--- a/history.html
+++ b/history.html
@@ -40,19 +40,12 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop"
                            data-toggle="dropdown">
-                            Teams
+                            Vaccines
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="teams/mercedes.html">Mercedes</a>
-                            <a class="dropdown-item" href="teams/ferrari.html">Ferrari</a>
-                            <a class="dropdown-item" href="teams/redbull.html">Red Bull</a>
-                            <a class="dropdown-item" href="teams/mclaren.html">Mclaren</a>
-                            <a class="dropdown-item" href="teams/renault.html">Renault</a>
-                            <a class="dropdown-item" href="teams/toro.html">Toro Rosso</a>
-                            <a class="dropdown-item" href="teams/haas.html">Haas</a>
-                            <a class="dropdown-item" href="teams/racingpoint.html">Racing Point</a>
-                            <a class="dropdown-item" href="teams/sauber.html">Alfa Romeo Sauber</a>
-                            <a class="dropdown-item" href="teams/williams.html">Williams</a>
+                            <a class="dropdown-item" href="teams/mercedes.html">Pfizer</a>
+                            <a class="dropdown-item" href="teams/ferrari.html">Moderna</a>
+                            <a class="dropdown-item" href="teams/redbull.html">Janssen</a>
 
                         </div>
                     </li>
@@ -63,15 +56,15 @@
 
     <main>
         <section>
-            <h2>History of Formula One</h2>
-            <p>Formula One can trace it's roots all the way back to the European Grand Prix's which were help in the early 1920's and 30's. The sport itself was formally organized in 1946 by the FIA but did not have many races until Europe was rebuilt after World War Two.  </p>
+            <h2>History of Covid-19</h2>
+            <p>Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus. Most people infected with the COVID-19 virus will experience mild to moderate respiratory illness and recover without requiring special treatment.  Older people, and those with underlying medical problems like cardiovascular disease, diabetes, chronic respiratory disease, and cancer are more likely to develop serious illness. The best way to prevent and slow down transmission is to be well informed about the COVID-19 virus, the disease it causes and how it spreads. Protect yourself and others from infection by washing your hands or using an alcohol based rub frequently and not touching your face.  </p>
         </section>
 
         <aside>
-            <h2>The First Grand Prix</h2>
-            <p>The first race to be held under the name Grand Prix was held in Le Mans, France in 1906. The race was almost 65 miles per lap and only had three turns.  Thus Maurice Farman was awarded the 'Grand Prix de Pau' for his overall victory in the Circuit du Sud-Ouest driving a Panhard 24 hp. </p>
+            <h2>The First Outbreak Jan 9</h2>
+            <p>At this point, the World Health Organization (WHO) still has doubts about the roots of what would become the COVID-19 pandemic, noting that the spate of pneumonia-like cases in Wuhan could have stemmed from a new coronavirus. There are 59 cases so far, and travel precautions are already at the forefront of experts’ concerns. </p>
         </aside>
-        <img src="images/f1history.jpeg" width="35%" height="30%" align="center" alt="history image" class="dev">
+        <img src="images/history.jpeg" width="35%" height="30%" align="center" alt="history image" class="dev">
 
     </main>
 </div>
