--- a/teams/mercedes.html
+++ b/teams/mercedes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contact Me</title>
+    <title>Mercedes</title>
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
@@ -40,19 +40,12 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop"
                            data-toggle="dropdown">
-                            Teams
+                            Vaccines
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="mercedes.html">Mercedes</a>
-                            <a class="dropdown-item" href="ferrari.html">Ferrari</a>
-                            <a class="dropdown-item" href="redbull.html">Red Bull</a>
-                            <a class="dropdown-item" href="mclaren.html">Mclaren</a>
-                            <a class="dropdown-item" href="renault.html">Renault</a>
-                            <a class="dropdown-item" href="toro.html">Toro Rosso</a>
-                            <a class="dropdown-item" href="haas.html">Haas</a>
-                            <a class="dropdown-item" href="racingpoint.html">Racing Point</a>
-                            <a class="dropdown-item" href="sauber.html">Alfa Romeo Sauber</a>
-                            <a class="dropdown-item" href="williams.html">Williams</a>
+                            <a class="dropdown-item" href="teams/mercedes.html">Pfizer</a>
+                            <a class="dropdown-item" href="teams/ferrari.html">Moderna</a>
+                            <a class="dropdown-item" href="teams/redbull.html">Janssen</a>
 
                         </div>
                     </li>
@@ -64,21 +57,19 @@
 
     <main>
         <section>
-            <h2>Mercedes AMG Petronas F1 Team</h2>
-            <p>The Mercedes F1 team was formed out of the ashes of the bankrupt Honda and BrawnGP racing teams. The teams has been a dominant force in the sport since the year 2014 when they won their first championship. ever since 2014 the only team to win a championship is the Mercedes F1 team.   </p>
+            <h2>Pfizer</h2>
+            <p>BioNTech, Fosun Pharma, Pfizer vaccine is a COVID-19 vaccine authorized by FDA and recommended by the CDC for use in the US for a limited population.</p>
         </section>
 
         <aside>
-            <h2>Notable Staff</h2>
+            <h2>Notable Facts</h2>
             <ul>
-                <li>Lewis Hamilton - Driver</li>
-                <li>Valterri Bottas - Driver</li>
-                <li>Toto Wolff - Team Principal</li>
-                <li>Andy Comwell - Head of Engine Development</li>
-                <li>James Allison - Technical Director</li>
+                <li>Two doses</li>
+                <li>MRna based</li>
+                <li> Research name: BNT162b2 </li>
             </ul>
         </aside>
-        <img src="../images/mercpage.jpeg" width="35%" height="30%" align="center" alt="merc image" class="dev">
+        <img src="../images/pfizer.jpeg" width="35%" height="30%" align="center" alt="merc image" class="dev">
 
     </main>
 
