--- a/index.html
+++ b/index.html
@@ -41,19 +41,13 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop"
                            data-toggle="dropdown">
-                            Teams
+                            Vaccines
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="teams/mercedes.html">Mercedes</a>
-                            <a class="dropdown-item" href="teams/ferrari.html">Ferrari</a>
-                            <a class="dropdown-item" href="teams/redbull.html">Red Bull</a>
-                            <a class="dropdown-item" href="teams/mclaren.html">Mclaren</a>
-                            <a class="dropdown-item" href="teams/renault.html">Renault</a>
-                            <a class="dropdown-item" href="teams/toro.html">Toro Rosso</a>
-                            <a class="dropdown-item" href="teams/haas.html">Haas</a>
-                            <a class="dropdown-item" href="teams/racingpoint.html">Racing Point</a>
-                            <a class="dropdown-item" href="teams/sauber.html">Alfa Romeo Sauber</a>
-                            <a class="dropdown-item" href="teams/williams.html">Williams</a>
+                            <a class="dropdown-item" href="teams/mercedes.html">Pfizer</a>
+                            <a class="dropdown-item" href="teams/ferrari.html">Moderna</a>
+                            <a class="dropdown-item" href="teams/redbull.html">Janssen</a>
+
 
                         </div>
                     </li>
@@ -63,8 +57,8 @@
     </div>
 
     <div class="f1-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="display-4">Formula One</h1>
-        <p class="lead">Formula One is recognized worldwide as the pinnacle of motor sports and by far the most technologically advanced cars in the world. If you ever wanted to learn about the history of the sport, the technology that drives these machines, or the teams itself have a look around this website. Within you will find answers to all these questions and more which will help you get an understanding of the sport and appreciate it even more.</p>
+        <h1 class="display-4">Covid-19 Vaccine Sign Up</h1>
+        <p class="lead">Coranvirus is a serious problem and the only way for us to wipe it out is to stay as safe and healthy as possible</p>
     </div>
 
 
@@ -75,105 +69,38 @@
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
             <li data-target="#myCarousel" data-slide-to="3"></li>
-            <li data-target="#myCarousel" data-slide-to="4"></li>
-            <li data-target="#myCarousel" data-slide-to="6"></li>
-            <li data-target="#myCarousel" data-slide-to="7"></li>
-            <li data-target="#myCarousel" data-slide-to="8"></li>
-            <li data-target="#myCarousel" data-slide-to="9"></li>
-            <li data-target="#myCarousel" data-slide-to="10"></li>
         </ol>
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images/mercedes.jpeg" alt="merc" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="jpeg"><rect width="50%" height="50%" fill="#777" /></imgsvg>
+                <img src="images/pfizer.jpeg" alt="merc" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="jpeg"><rect width="50%" height="50%" fill="#777" /></imgsvg>
                 <div class="container">
                     <div class="carousel-caption text-left">
-                        <h3>Mercedes AMG Petronas F1 Team</h3>
+                        <h3>Pfizer Vaccine</h3>
                     </div>
                 </div>
             </div>
 
             <div class="carousel-item">
-                <img src="images/ferrari.jpeg" alt="ferrari" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="jpeg"><rect width="50%" height="50%" fill="#777"/></svg>
+                <img src="images/moderna.jpeg" alt="ferrari" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="jpeg"><rect width="50%" height="50%" fill="#777"/></svg>
                 <div class="container">
                     <div class="carousel-caption text-right">
-                        <h3>Scuderia Ferrari</h3>
+                        <h3>Moderna Vaccine</h3>
                     </div>
                 </div>
             </div>
 
             <div class="carousel-item">
-                <img src="images/redbull.jpeg" alt="redbull" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="jpeg"><rect width="50%" height="50%" fill="#777"/></svg>
+                <img src="images/janssen.jpeg" alt="redbull" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="jpeg"><rect width="50%" height="50%" fill="#777"/></svg>
                 <div class="container">
                     <div class="carousel-caption text-right">
-                        <h3>Red Bull Racing</h3>
+                        <h3>Johnson & Johnson Janssen Vaccine</h3>
                     </div>
                 </div>
             </div>
 
-            <div class="carousel-item">
-                <img src="images/mclaren.jpeg" alt="mclaren" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="jpeg"><rect width="50%" height="50%" fill="#777"/></svg>
-                <div class="container">
-                    <div class="carousel-caption text-right">
-                        <h3>McLaren Racing Limited</h3>
-                    </div>
-                </div>
-            </div>
 
-            <div class="carousel-item">
-                <img src="images/renault.jpeg" alt="renault" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="jpeg"><rect width="50%" height="50%" fill="#777"/></svg>
-                <div class="container">
-                    <div class="carousel-caption text-right">
-                        <h3>Renault F1 Team</h3>
-                    </div>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img src="images/haas.jpeg" alt="haas" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="jpeg"><rect width="50%" height="50%" fill="#777"/></svg>
-                <div class="container">
-                    <div class="carousel-caption text-right">
-                        <h3>Haas F1 Team</h3>
-                    </div>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img src="images/toro.jpeg" alt="toro" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="jpeg"><rect width="50%" height="50%" fill="#777"/></svg>
-                <div class="container">
-                    <div class="carousel-caption text-right">
-                        <h3>Scuderia Toro Rosso</h3>
-                    </div>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img src="images/racingpoint.jpeg" alt="racing point" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="jpeg"><rect width="50%" height="50%" fill="#777"/></svg>
-                <div class="container">
-                    <div class="carousel-caption text-right">
-                        <h3>BWT Racing Point F1 Team</h3>
-                    </div>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img src="images/sauber.jpeg" alt="sauber" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="jpeg"><rect width="50%" height="50%" fill="#777"/></svg>
-                <div class="container">
-                    <div class="carousel-caption text-right">
-                        <h3>Alfa Romeo Sauber Motorsport AG</h3>
-                    </div>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img src="images/williams.jpeg" alt="williams" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="jpeg"><rect width="50%" height="50%" fill="#777"/></svg>
-                <div class="container">
-                    <div class="carousel-caption text-right">
-                        <h3>Williams Grand Prix Engineering Limited</h3>
-                    </div>
-                </div>
-            </div>
         </div>
 
         <!-- Left and right controls -->
@@ -191,12 +118,12 @@
         <div class="card-deck mb-3 text-center">
             <div class="card mb-4 shadow-sm">
                 <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">History of F1</h4>
+                    <h4 class="my-0 font-weight-normal">What Is Covid-19?</h4>
                 </div>
                 <div class="card-body">
                     <h1 class="card-title pricing-card-title"></h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>Interested in the History of the sport?</li>
+                        <li>Learn about symptoms and signs of Covid-19</li>
                         <li>Click here!</li>
                     </ul>
                     <p><a class="btn btn-secondary" href="history.html" role="button">View details &raquo;</a></p>
@@ -204,24 +131,24 @@
             </div>
             <div class="card mb-4 shadow-sm">
                 <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Current Regulations</h4>
+                    <h4 class="my-0 font-weight-normal">Who qualifies?</h4>
                 </div>
                 <div class="card-body">
                     <h1 class="card-title pricing-card-title"></h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>If you would like to know the regulations that every team builds their car to click here!</li>
+                        <li>If you would like to know who can qualify for a vaccine click here!</li>
                     </ul>
                     <p><a class="btn btn-secondary" href="regulations.html" role="button">View details &raquo;</a></p>
                 </div>
             </div>
             <div class="card mb-4 shadow-sm">
                 <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Contact Me</h4>
+                    <h4 class="my-0 font-weight-normal">Contact Form</h4>
                 </div>
                 <div class="card-body">
                     <h1 class="card-title pricing-card-title"></h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>If you would like to have any comments or concerns addressed please contact me using the form linked below.</li>
+                        <li>If you would like to have any comments or concerns addressed please contact us using the form linked below.</li>
                     </ul>
                     <p><a class="btn btn-secondary" href="contact.html" role="button">View details &raquo;</a></p>
                 </div>
