--- a/regulations.html
+++ b/regulations.html
@@ -40,19 +40,12 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop"
                            data-toggle="dropdown">
-                            Teams
+                            Vaccines
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="teams/mercedes.html">Mercedes</a>
-                            <a class="dropdown-item" href="teams/ferrari.html">Ferrari</a>
-                            <a class="dropdown-item" href="teams/redbull.html">Red Bull</a>
-                            <a class="dropdown-item" href="teams/mclaren.html">Mclaren</a>
-                            <a class="dropdown-item" href="teams/renault.html">Renault</a>
-                            <a class="dropdown-item" href="teams/toro.html">Toro Rosso</a>
-                            <a class="dropdown-item" href="teams/haas.html">Haas</a>
-                            <a class="dropdown-item" href="teams/racingpoint.html">Racing Point</a>
-                            <a class="dropdown-item" href="teams/sauber.html">Alfa Romeo Sauber</a>
-                            <a class="dropdown-item" href="teams/williams.html">Williams</a>
+                            <a class="dropdown-item" href="teams/mercedes.html">Pfizer</a>
+                            <a class="dropdown-item" href="teams/ferrari.html">Moderna</a>
+                            <a class="dropdown-item" href="teams/redbull.html">Janssen</a>
 
                         </div>
                     </li>
@@ -63,21 +56,11 @@
 
     <main>
         <section>
-            <h2>Current F1 Regulations</h2>
-            <p>The current Formula One regulations created the biggest F1 cars to date, but they are still able to smash lap records throughout the world. the reason the cars have gotten so large recently is due the increased focus on safety features of the car, an onboard fuel tank that holds enough fuel for the entire race (no refueling during the race), and the battery packs throughout the car that hold energy. </p>
+            <h2>Current Vaccine Regulations</h2>
+            <p>All individuals aged 16 and older who live, work, or study in New Jersey are eligible for COVID-19 vaccines.</p>
         </section>
 
-        <aside>
-            <h2>Current Car Specifications</h2>
-            <ul>
-                <li>1.6 litre turbocharged V6</li>
-                <li>ERS (energy recovery system)</li>
-                <li>roughly 850-950 total horsepower depending on engine mode and manufacturer</li>
-                <li>maximum engine rpm of 15,000</li>
-                <li>extensive aerodynamic elements (wings, barge boards, splitters)</li>
-            </ul>
-        </aside>
-        <img src="images/regulations.jpeg" width="35%" height="30%" align="center" alt="regulations image" class="dev">
+        <img src="images/vaccinetime.jpeg" width="35%" height="30%" align="center" alt="regulations image" class="dev">
 
     </main>
 
