--- a/teams/redbull.html
+++ b/teams/redbull.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contact Me</title>
+    <title>Redbull</title>
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
@@ -40,19 +40,12 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop"
                            data-toggle="dropdown">
-                            Teams
+                            Vaccines
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="mercedes.html">Mercedes</a>
-                            <a class="dropdown-item" href="ferrari.html">Ferrari</a>
-                            <a class="dropdown-item" href="redbull.html">Red Bull</a>
-                            <a class="dropdown-item" href="mclaren.html">Mclaren</a>
-                            <a class="dropdown-item" href="renault.html">Renault</a>
-                            <a class="dropdown-item" href="toro.html">Toro Rosso</a>
-                            <a class="dropdown-item" href="haas.html">Haas</a>
-                            <a class="dropdown-item" href="racingpoint.html">Racing Point</a>
-                            <a class="dropdown-item" href="sauber.html">Alfa Romeo Sauber</a>
-                            <a class="dropdown-item" href="williams.html">Williams</a>
+                            <a class="dropdown-item" href="teams/mercedes.html">Pfizer</a>
+                            <a class="dropdown-item" href="teams/ferrari.html">Moderna</a>
+                            <a class="dropdown-item" href="teams/redbull.html">Janssen</a>
 
                         </div>
                     </li>
@@ -64,21 +57,19 @@
 
     <main>
         <section>
-            <h2>Red Bull Racing</h2>
-            <p>Red Bull Racing has been one of the biggest surprises in the world of motorsports ever, being a racing team started by a energy drink company no one expected Red Bull to remain on the grid for long. However, after continued perseverance and heavy investment into a young driver program Red Bull became a serious title contender in 2009. In 2010 the unbelievable happened, Sebastian Vettel won them the drivers championship. They followed this up by consecutively winning the chamioship until 2014 when their streak was ended by Mercedes. Red Bull continues innovating and has been a regular challenger for podiums.   </p>
+            <h2>Johnson & Johnson Janssen Vaccine</h2>
+            <p>The Janssen Pharmaceutical Companies vaccine is a vaccine that aims to protect against COVID-19. </p>
         </section>
 
         <aside>
-            <h2>Notable Staff</h2>
+            <h2>Notable Facts</h2>
             <ul>
-                <li>Max Verstappen - Driver</li>
-                <li>Alex Albon - Driver</li>
-                <li>Christian Horner - Team Principal</li>
-                <li>Dr. Helmut Marko - Motorsport Consultant</li>
-                <li>Adrian Newey - Technical Director</li>
+                <li>One dose</li>
+                <li>Temporarily stopped being offered </li>
+
             </ul>
         </aside>
-        <img src="../images/redbull.jpeg" width="35%" height="30%" align="center" alt="merc image" class="dev">
+        <img src="../images/janssen.jpeg" width="35%" height="30%" align="center" alt="merc image" class="dev">
 
     </main>
 
