--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop"
                            data-toggle="dropdown">
-                            Vaccines
+                            teams
                         </a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="teams/mercedes.html">Pfizer</a>
