--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop"
                            data-toggle="dropdown">
-                            teams
+                            Vaccines
                         </a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="teams/mercedes.html">Pfizer</a>
