--- a/index.html
+++ b/index.html
@@ -47,48 +47,47 @@
 
     <div class="f1-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h1 class="display-4">Obeject Orientated Programming Tips and Tricks</h1>
-        <p class="lead"> Object orientated programming in Python is a complicated topic and adding pylint into the equation makes it that much harder for new programmers to get acclimated to the programs. Listed below you will find explanations on some of the key topics along with code you can test out in the repository. 
+        <p class="lead"> Object orientated programming in Python is a complicated topic and adding pylint into the equation makes it that much harder for new programmers to get acclimated to the programs. Listed below you will find explanations on some of the key topics along with code you can test out in the repository.  </p>
 
-An important thing that you should learn is how to use and implement pylint into your code so that you can check your code for any errors before you release it. The first step to integrate pylint into Python is to first download Python. Then through the command terminal run the command “python -m pip install pylint”. Then locate your pylint install and choose either windows or mac. Then you go into Pycharm’s settings tab and choose File->Settings, then go to Tools->External Tools. Click the + to add a new external tool and fill it in with information from your pylint install. Then run pylint from your external tabs menu. Look at the terminal output to see the results of the pylint test. This is one of many ways you can use pylint, there are methods to install it directly from the command line and nothing else. 
+        </p> An important thing that you should learn is how to use and implement pylint into your code so that you can check your code for any errors before you release it. The first step to integrate pylint into Python is to first download Python. Then through the command terminal run the command “python -m pip install pylint”. Then locate your pylint install and choose either windows or mac. Then you go into Pycharm’s settings tab and choose File->Settings, then go to Tools->External Tools. Click the + to add a new external tool and fill it in with information from your pylint install. Then run pylint from your external tabs menu. Look at the terminal output to see the results of the pylint test. This is one of many ways you can use pylint, there are methods to install it directly from the command line and nothing else.  </p> 
 
-Encapsulation - Encapsulation is one of the core components of Object Orientated Programming in Python. It allows you to set a restriction on accessing variables by wrapping the said data in either a “__” or “_”. This gives the benefit of the data not being able to be accidentally altered. The altered variables that are encapsulated are called “private variables”.
+        </p> Encapsulation - Encapsulation is one of the core components of Object Orientated Programming in Python. It allows you to set a restriction on accessing variables by wrapping the said data in either a “__” or “_”. This gives the benefit of the data not being able to be accidentally altered. The altered variables that are encapsulated are called “private variables”. </p>
 
-Inheritance - In Python inheritance allows you to define a class that will inherit all the methods and properties from a separate class. The original class is referred to as the parent class and the class inheriting the data is referred to as a child class. This allows you to have reusable code that can speed up development time. 
+        </p> Inheritance - In Python inheritance allows you to define a class that will inherit all the methods and properties from a separate class. The original class is referred to as the parent class and the class inheriting the data is referred to as a child class. This allows you to have reusable code that can speed up development time.  </p>
 
-Polymorphism - simply putting it the topic of polymorphism is when the same function name is used for a large variety of data types. This allows you to be far more efficient in your coding.
+        </p> Polymorphism - simply putting it the topic of polymorphism is when the same function name is used for a large variety of data types. This allows you to be far more efficient in your coding.  </p>
 
-Abstraction - Abstract classes can be described as a blueprint for other classes, this allows you to make maintaining a large codebase much more efficient.
+        </p> Abstraction - Abstract classes can be described as a blueprint for other classes, this allows you to make maintaining a large codebase much more efficient.  </p>
 
-Instantiation - To instantiate something is to create a copy of a class that inherits all the variables as well as the methods. 
+        </p> Instantiation - To instantiate something is to create a copy of a class that inherits all the variables as well as the methods.   </p>
 
-Factory - Factories are a type of design pattern that creates a factory method that can define a method. This can be seen as an object for creating other objects.
+        </p> Factory - Factories are a type of design pattern that creates a factory method that can define a method. This can be seen as an object for creating other objects.  </p>
 
-Object - in Python an object is a data type that has a state and behavior associated with it.
+        </p> Object - in Python an object is a data type that has a state and behavior associated with it.  </p>
 
-Class - A class in Python is just a collection of objects. It is the layout that objects are being created from. 
+        </p> Class - A class in Python is just a collection of objects. It is the layout that objects are being created from.  </p>
 
-Namespace - this a system in Python that allows you to have a unique name for each object
+        </p> Namespace - this a system in Python that allows you to have a unique name for each object  </p>
 
-Constructor - A constructor in Python is a type of method that Python calls on when it instantiates an object in your class. 
+        </p> Constructor - A constructor in Python is a type of method that Python calls on when it instantiates an object in your class.  </p>
 
-Type hint - this provides a standard syntax for type annotations which allows your program to be better optimized for static analysis, type checking, and code generation. 
+         </p> Type hint - this provides a standard syntax for type annotations which allows your program to be better optimized for static analysis, type checking, and code generation.  </p>
 
-Type cast - this is the process of converting one data type into another data type. For example converting an integer to a float. 
+         </p> Type cast - this is the process of converting one data type into another data type. For example converting an integer to a float.  </p>
 
-Unit test - a unit test is when you test individual portions of your code to see if they are functioning properly. Rather than testing the whole program you take in a few inputs at max and and the unit test provides a singular output. 
+         </p>Unit test - a unit test is when you test individual portions of your code to see if they are functioning properly. Rather than testing the whole program you take in a few inputs at max and and the unit test provides a singular output.  </p>
 
-Static Method - Similar to a class method a static method is bound to the class instead of an object with the class. But where the static method starts to differ is that it is not able to access or modify the class state. 
+         </p> Static Method - Similar to a class method a static method is bound to the class instead of an object with the class. But where the static method starts to differ is that it is not able to access or modify the class state.  </p>
 
-Class method - A class method is a method that is bound to the class itself and not an object within the class. This allows you to create a function that is evaluated after it is defined. This takes cls as the first parameter and can allow you to access/modify the class state. 
+         </p> Class method - A class method is a method that is bound to the class itself and not an object within the class. This allows you to create a function that is evaluated after it is defined. This takes cls as the first parameter and can allow you to access/modify the class state.  </p>
 
-Facade - This is a type of design pattern in Python that provides a simple interface for complex classes, libraries, or frameworks. This provides a straightforward solution to complex systems that many people would be unfamiliar with.
+         </p> Facade - This is a type of design pattern in Python that provides a simple interface for complex classes, libraries, or frameworks. This provides a straightforward solution to complex systems that many people would be unfamiliar with. </p>
 
-Design patterns - Design Patterns are arguably the most important thing you can learn as a junior programmer; they are defined as a way to provide a repeatable solution to a commonly occurring problem in software design. The ability to show an employer or a coworker that you know how to properly sort and organize your code will make a lasting impression. 
+         </p> Design patterns - Design Patterns are arguably the most important thing you can learn as a junior programmer; they are defined as a way to provide a repeatable solution to a commonly occurring problem in software design. The ability to show an employer or a coworker that you know how to properly sort and organize your code will make a lasting impression.  </p>
 
 
             
- </p>
-    </div>
+</div>
 
 
    
