--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="f1-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="display-4">Obeject Orientated Programming Tips and Tricks</h1>
+        <h1 class="display-4">Object Orientated Programming Tips and Tricks</h1>
         <p class="lead"> Object orientated programming in Python is a complicated topic and adding pylint into the equation makes it that much harder for new programmers to get acclimated to the programs. Listed below you will find explanations on some of the key topics along with code you can test out in the repository.  </p>
 
         </p> An important thing that you should learn is how to use and implement pylint into your code so that you can check your code for any errors before you release it. The first step to integrate pylint into Python is to first download Python. Then through the command terminal run the command “python -m pip install pylint”. Then locate your pylint install and choose either windows or mac. Then you go into Pycharm’s settings tab and choose File->Settings, then go to Tools->External Tools. Click the + to add a new external tool and fill it in with information from your pylint install. Then run pylint from your external tabs menu. Look at the terminal output to see the results of the pylint test. This is one of many ways you can use pylint, there are methods to install it directly from the command line and nothing else.  </p> 
