--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                 <ul class="navbar-nav">
                     <!-- Links -->
                     <li class="nav-item">
-                        <a class="nav-link" href="history.html">AAA Testing</a>
+                        <a class="nav-link" href="AAA.html">AAA Testing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="regulations.html">Calculator</a>
+                        <a class="nav-link" href="Calc.html">Calculator</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Design Patterns Used</a>
+                        <a class="nav-link" href="Design.html">Design Patterns Used</a>
                     </li>
                     
                         </div>
