--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                         <a class="nav-link" href="AAA.html">AAA Testing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Calc.html">Calculator</a>
+                        <a class="nav-link" href="calc.html">Calculator</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Design.html">Design Patterns Used</a>
+                        <a class="nav-link" href="design.html">Design Patterns Used</a>
                     </li>
                     
                         </div>
