--- a/calc.html
+++ b/calc.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>regulations</title>
+    <title>Looking at the Calculator</title>
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
@@ -28,25 +28,15 @@
                 <ul class="navbar-nav">
                     <!-- Links -->
                     <li class="nav-item">
-                        <a class="nav-link" href="history.html">History</a>
+                        <a class="nav-link" href="AAA.html">AAA Testing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="regulations.html">Current Regulations</a>
+                        <a class="nav-link" href="calc.html">Calculator</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Me</a>
+                        <a class="nav-link" href="design.html">Design Patterns Used</a>
                     </li>
-                    <!-- Dropdown -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop"
-                           data-toggle="dropdown">
-                            Vaccines
-                        </a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="teams/mercedes.html">Pfizer</a>
-                            <a class="dropdown-item" href="teams/ferrari.html">Moderna</a>
-                            <a class="dropdown-item" href="teams/redbull.html">Janssen</a>
-
+                    
                         </div>
                     </li>
                 </ul>
@@ -56,12 +46,21 @@
 
     <main>
         <section>
-            <h2>Current Vaccine Regulations</h2>
-            <p>All individuals aged 16 and older who live, work, or study in New Jersey are eligible for COVID-19 vaccines.</p>
+            <h2>How the Calulator program demonstrates OOP</h2>
+            <p>Encapsulation - The calculator program that we created demonstrates encapsulation when you look at the calculation.py class. The function has the “__” in front of the name which denotes that encapsulation is being used </p>
+            <img src="images/OOPs1.jpeg" width="35%" height="30%" align="center" alt="regulations image" class="dev">
         </section>
 
-        <img src="images/vaccinetime.jpeg" width="35%" height="30%" align="center" alt="regulations image" class="dev">
+        <p>Inheritance - The calculator program also demonstrates that it is using inheritance. Whenever the calculator is performing a calculation, the class for the operator (addition, subtraction, division, etc) inherits the methods and data from the Calculation class.  </p>
+        <img src="images/encap1.jpeg" width="35%" height="30%" align="center" alt="regulations image" class="dev">
+        <img src="images/encap2.jpeg" width="35%" height="30%" align="center" alt="regulations image" class="dev">
+        <img src="images/encaap3.jpeg" width="35%" height="30%" align="center" alt="regulations image" class="dev">
 
+        <p>Polymorphism - The topic of polymorphism can be implemented into most programs you make, you just have to have a single function name that is used for different types.  </p>
+        <img src="images/poly.jpeg" width="35%" height="30%" align="center" alt="regulations image" class="dev">
+        
+        <p>Abstraction - You can demonstrate the concept of abstraction in your project by using an abstract class that allows you to create a blueprint for future classes that are created.   </p>
+        <img src="images/abstraction.jpeg" width="35%" height="30%" align="center" alt="regulations image" class="dev">
     </main>
 
 
@@ -87,4 +86,3 @@
 </body>
 </html>
 
-<!-- DEVELOPER: Neal Patel, IS117-450, Summer 2020 ->
