--- a/calc.html
+++ b/calc.html
@@ -46,10 +46,11 @@
 
     <main>
         <section>
-            <h2>How the Calulator program demonstrates OOP</h2>
-            <p>Encapsulation - The calculator program that we created demonstrates encapsulation when you look at the calculation.py class. The function has the “__” in front of the name which denotes that encapsulation is being used </p>
-            <img src="images/OOPs1.jpeg" width="35%" height="30%" align="center" alt="regulations image" class="dev">
+            <h2>How the Calulator program demonstrates the key components of Object Orientated Programming</h2>
         </section>
+        <p>Encapsulation - The calculator program that we created demonstrates encapsulation when you look at the calculation.py class. The function has the “__” in front of the name which denotes that encapsulation is being used </p>
+        <img src="OOPs1.jpeg" width="35%" height="30%" align="center" alt="regulations image" class="dev">
+        
 
         <p>Inheritance - The calculator program also demonstrates that it is using inheritance. Whenever the calculator is performing a calculation, the class for the operator (addition, subtraction, division, etc) inherits the methods and data from the Calculation class.  </p>
         <img src="images/encap1.jpeg" width="35%" height="30%" align="center" alt="regulations image" class="dev">
