--- a/calc.html
+++ b/calc.html
@@ -49,19 +49,19 @@
             <h2>How the Calulator program demonstrates the key components of Object Orientated Programming</h2>
         </section>
         <p>Encapsulation - The calculator program that we created demonstrates encapsulation when you look at the calculation.py class. The function has the “__” in front of the name which denotes that encapsulation is being used </p>
-        <img src="OOPs1.jpeg" width="35%" height="30%" align="center" alt="regulations image" class="dev">
+        <img src="images/OOPs1.jpeg.png" width="35%" height="30%" align="center" alt="regulations image" class="dev">
         
 
         <p>Inheritance - The calculator program also demonstrates that it is using inheritance. Whenever the calculator is performing a calculation, the class for the operator (addition, subtraction, division, etc) inherits the methods and data from the Calculation class.  </p>
-        <img src="images/encap1.jpeg" width="35%" height="30%" align="center" alt="regulations image" class="dev">
-        <img src="images/encap2.jpeg" width="35%" height="30%" align="center" alt="regulations image" class="dev">
-        <img src="images/encaap3.jpeg" width="35%" height="30%" align="center" alt="regulations image" class="dev">
+        <img src="images/encap1.jpeg.png" width="35%" height="30%" align="center" alt="regulations image" class="dev">
+        <img src="images/encap2.jpeg.png" width="35%" height="30%" align="center" alt="regulations image" class="dev">
+        <img src="images/encaap3.jpeg.png" width="35%" height="30%" align="center" alt="regulations image" class="dev">
 
         <p>Polymorphism - The topic of polymorphism can be implemented into most programs you make, you just have to have a single function name that is used for different types.  </p>
-        <img src="images/poly.jpeg" width="35%" height="30%" align="center" alt="regulations image" class="dev">
+        <img src="images/poly.jpeg.png" width="35%" height="30%" align="center" alt="regulations image" class="dev">
         
         <p>Abstraction - You can demonstrate the concept of abstraction in your project by using an abstract class that allows you to create a blueprint for future classes that are created.   </p>
-        <img src="images/abstraction.jpeg" width="35%" height="30%" align="center" alt="regulations image" class="dev">
+        <img src="images/abstraction.jpeg.png" width="35%" height="30%" align="center" alt="regulations image" class="dev">
     </main>
 
 
