--- a/calc.html
+++ b/calc.html
@@ -55,7 +55,7 @@
         <p>Inheritance - The calculator program also demonstrates that it is using inheritance. Whenever the calculator is performing a calculation, the class for the operator (addition, subtraction, division, etc) inherits the methods and data from the Calculation class.  </p>
         <img src="images/encap1.jpeg.png" width="35%" height="30%" align="center" alt="regulations image" class="dev">
         <img src="images/encap2.jpeg.png" width="35%" height="30%" align="center" alt="regulations image" class="dev">
-        <img src="images/encaap3.jpeg.png" width="35%" height="30%" align="center" alt="regulations image" class="dev">
+        <img src="images/encap3.jpeg.png" width="35%" height="30%" align="center" alt="regulations image" class="dev">
 
         <p>Polymorphism - The topic of polymorphism can be implemented into most programs you make, you just have to have a single function name that is used for different types.  </p>
         <img src="images/poly.jpeg.png" width="35%" height="30%" align="center" alt="regulations image" class="dev">
