--- a/AAA.html
+++ b/AAA.html
@@ -54,7 +54,7 @@
         </section>
 
         
-        <img src="images/AAA.jpeg" width="35%" height="30%" align="center" alt="history image" class="dev">
+        <img src="images/AAA.jpeg.png" width="35%" height="30%" align="center" alt="history image" class="dev">
 
     </main>
 </div>
