--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="design.html">Design Patterns Used</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="calculator.html">Working Calculator</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="result.html">Results</a>
+                    </li>
                     
                         </div>
                     </li>
