--- a/calculator.html
+++ b/calculator.html
@@ -49,7 +49,7 @@
             </div>
         </nav>
     </div>
-  <form action="/calculator" method="POST">
+  <form action="calculator.py" method="POST">
         <label for="value_a" class="col-sm-2 col-form-label">Value 1:</label><br>
         <input type="text" id="value_a" name="value_a" value="1"><br>
         <label for="value_b" class="col-sm-2 col-form-label">Value 2:</label><br>
